demo/APPS/kubetoy/2_mcm-app/4-app-deployables.yaml
apiVersion: app.ibm.com/v1alpha1
kind: Deployable
metadata:
  name: kubetoy-channel-sec-file
  namespace: kubetoy-channel-namespace
  labels:
    app: kubetoy-app
spec:
  template:
    spec: {}
    apiVersion: v1
    kind: Secret
    metadata:
      name: kubetoy-secret-files
    type: Opaque
    data:
      toy-secret.txt: U2hoLi4uIFRoaXMgaXMgYSBzZWNyZXQu


kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: kubetoy
  labels:
    app: kubetoy-app
spec:
  subdomain: ''
  to:
    kind: Service
    name: kubetoy-service
    weight: 100
  port:
    targetPort: http
  wildcardPolicy: None
